apps/base/router/allow-router-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-router-egress
spec:
  podSelector:
    matchLabels:
      'app.kubernetes.io/name': router
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              'kubernetes.io/metadata.name': knighthacks-microservices
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              'kubernetes.io/metadata.name': knighthacks-microservices
