apps/base/router/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: router-network-policy
spec:
  podSelector:
    matchLabels:
      'app.kubernetes.io/name': router
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              'kubernetes.io/metadata.name': knighthacks-microservices
